--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>customer</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.wang.mq</groupId>
+            <artifactId>base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
