--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
+#spring.rabbitmq.virtual-host=/
 #确认消息已发送到交换机(Exchange)
 #spring.rabbitmq.publisher-confirms=true
 #确认消息已发送到队列(Queue)
