--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
+#spring.rabbitmq.virtual-host=/
 #确认消息已发送到交换机(Exchange)
-spring.rabbitmq.publisher-confirms=true
+#spring.rabbitmq.publisher-confirms=true
 #确认消息已发送到队列(Queue)
-spring.rabbitmq.publisher-returns=true
+#spring.rabbitmq.publisher-returns=true
